syntax = "proto3";

message blocks_request {
/*
  Peer A send this when requesting blocks to show what is its top of the chain so if he is many
  blocks behind peer B will send him more blocks. If connects for the first time, this will be zero.
*/
  bytes top_block_hash = 1;

  // Peer A sends the hash/es of the block/s he requests from B
  repeated bytes block_hash_requested = 2;
}

message block {
  bytes hash = 1;
  bytes prev_hash = 2;
  uint32 height = 3;
  bytes discovered_by = 4;
  bytes nonce = 5;
}

message blocks_response {
  // Peer B sets the hash/es of the block/s he sends to A
  repeated bytes block_hash = 1;
   // Peer B sends the whole block/s (serialized block messages) to A
  repeated bytes whole_block = 2;
}

message data {
  blocks_request msg_type_1 = 1;
  blocks_response msg_type_2 = 2;
}

message header {
  uint32 message_size = 1;
}

message peer_info {
  string data = 1;
}
